# irctc_agent2

./: .gitignore  README.md  ec_out.txt  package-lock.json  tools.ts
ai-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  test_ec7_repro.py
ai-service/app/: main.py
ai-service/app/api/: chat.py  conversations.py  dependencies.py  health.py  routes.py  websocket.py
ai-service/app/auth/: current_user.py  jwt.py  permissions.py
ai-service/app/config/: constants.py  settings.py
ai-service/app/core/: exceptions.py  handlers.py  lifespan.py
ai-service/app/db/: __init__.py  models.py  mongo.py
ai-service/app/graph/: __init__.py  arg_patcher.py  builder.py  edges.py  interrupts.py  ranking.py  router.py  state.py  tool_meta.py  tool_preconditions.py
ai-service/app/llm/: client.py  models.py  streaming.py  structured.py
ai-service/app/mcp/: __init__.py  adapters.py  client.py  discovery.py  exceptions.py  normalizer.py  registry.py  session.py  transport.py
ai-service/app/memory/: __init__.py  cache.py  checkpoints.py  context_builder.py  conversation.py  conversation_memory.py  preference_memory.py  preferences.py  working_memory.py
ai-service/app/schemas/: chat.py  errors.py  health.py
ai-service/app/services/: chat.py  claude.py  conversation_manager.py  openai_service.py
ai-service/app/telemetry/: langsmith.py  logging.py  metrics.py  tracing.py
ai-service/tests/: test_arg_patcher.py  test_preferences.py  test_ranking.py  test_reflection_and_grounding.py  test_slot_filler.py  test_tool_meta.py
(+178 files in other folders)
