[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "Python AI orchestration service for IRCTC"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.34.0",
	"pydantic>=2.8.0",
	"pydantic-settings>=2.7.0",
	"httpx>=0.27.0",
	"websockets>=12.0",
	"PyJWT>=2.9.0",
	"anthropic>=0.45.0",
	"loguru>=0.7.3",
	"langsmith[claude-agent-sdk]>=0.10.9",
	"claude-agent-sdk>=0.2.124",
	"python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-asyncio>=0.24.0",
	"ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
